--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
-    "express": "4.18.1"
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
+    "express": "4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.1"
   }
 }
